# miniclj

./: .gitignore  404.html  Cargo.toml  README.md  index.html
.github/workflows/: cd.yml  ci.yml
_next/static/chunks/: 392-2550ae0dafeb3d81.js  442.3ecc7a180992cd01.js  7f0c75c1-86aa7dd793e9d384.js  984.c0132271390ef172.js  framework-338fe8f5940e5d93.js  main-cde52b30bdb40695.js  webpack-72b1bcb18dba748a.js
_next/static/wasm/: e29eba754de79ed9.wasm
_next/static/ybqTRsm7CXdtWRSe-JiZ8/: _buildManifest.js
docs/: DesignDoc.tex  Diagrams.mdj  IND1.tex  Makefile  UserManual.tex
examples/: cyclic_factorial.clj  cyclic_factorial.mclj  cyclic_fibonacci.clj  cyclic_fibonacci.mclj  find_in_list.clj  find_in_list.mclj  global_matrix.clj  global_matrix.mclj  matrix_multiplication.clj  matrix_multiplication.mclj  memoized_fibonacci.clj  memoized_fibonacci.mclj  recursive_factorial.clj  recursive_factorial.mclj  recursive_fibonacci.clj  recursive_fibonacci.mclj  reduce_factorial.clj  reduce_factorial.mclj  roman_nums.clj  roman_nums.mclj  sort_list.clj  sort_list.mclj
miniclj/: Cargo.toml
miniclj-lib/: Cargo.toml  build.rs
miniclj-lib/src/: constant.rs  instruction.rs  lib.rs  lispparser.lalrpop  memaddress.rs
miniclj-lib/src/callables/: callable.rs  comparisonops.rs  conditionals.rs  cycles.rs  factorops.rs  groupingfns.rs  iofns.rs  lambda.rs  mod.rs  scopefns.rs  typecastingfns.rs
miniclj-lib/src/callables/collection/: access.rs  creation.rs  generation.rs  mod.rs  modification.rs  transducers.rs
miniclj-lib/src/compiler/: error.rs  literal.rs  mod.rs  sexpr.rs  state.rs  symboltable.rs
miniclj-lib/src/parsers/: mod.rs
miniclj-lib/src/vm/: error.rs  list.rs  scope.rs  state.rs  value.rs
miniclj-wasm/: Cargo.toml
miniclj-wasm/src/: lib.rs  result.rs
miniclj/src/: cli.rs  main.rs
playground/: next.config.js  package.json  tsconfig.json
playground/components/: CodeEditor.jsx  Header.tsx  OutputTabs.tsx  ResultTab.tsx
playground/pages/: _app.tsx  index.tsx
src/: ast.rs  bytecodeparser.lalrpop  cli.rs  constant.rs  instruction.rs  lispparser.lalrpop  main.rs  memaddress.rs  miniclj.lalrpop  parser.lalrpop  scope.rs  sexpr.rs
src/callables/: callable.rs  collectionfns.rs  comparisonops.rs  conditionals.rs  factorops.rs  groupingfns.rs  iofns.rs  lambda.rs  lambdafns.rs  lambdas.rs  mod.rs  scopefns.rs  seqtransformfns.rs  typecastingfns.rs
src/callables/collection/: access.rs  creation.rs  transducers.rs
src/compiler/: address.rs  callablestable.rs  compiler.rs  constant.rs  error.rs  function.rs  instruction.rs  literal.rs  memaddress.rs  mod.rs  scope.rs  sexpr.rs  state.rs  symboltable.rs
src/compiler/callables/: iofns.rs  (+10 more)
src/value/: callable.rs  list.rs  map.rs  mod.rs  set.rs  sexpr.rs  vector.rs
src/vm/: error.rs  list.rs  mod.rs  scope.rs  state.rs  value.rs  vm.rs
(+11 files in other folders)
