[package]
name = "miniclj-lib"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/MarioJim/miniclj"
license = "GPL-3.0-or-later"
build = "build.rs"

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
dyn-clone = "1.0"
escape8259 = "0.5"
lalrpop-util = { version = "0.19.6", features = ["lexer"] }
num = "0.4"
smol_str = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "0.3", features = ["Window", "Document", "Element"] }
