[package]
name = "miniclj-wasm"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/MarioJim/miniclj"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
miniclj-lib = { path = "../miniclj-lib" }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
