[package]
name = "miniclj"
version = "0.1.0"
edition = "2021"
description = "Clojure-like lisp compiler and interpreter written in Rust"
authors = ["MarioJim <mario.emilio.j@gmail.com>"]
repository = "https://github.com/MarioJim/miniclj"
license = "GPL-3.0-or-later"

[dependencies]
clap = "3.0.0-beta.5"
miniclj-lib = { path = "../miniclj-lib" }
